--- a/packages/amass/build
+++ b/packages/amass/build
@@ -1,14 +1,12 @@
-#!/usr/bin/env sh
+#!/usr/bin/env bash
 
 set +e
 
 arch-nspawn $CHROOT/root pacman -Syyu --noconfirm
 makechrootpkg -c -r $CHROOT -- -i -c
 
-arch-nspawn $CHROOT/$USER << EOF
-amass -h
-amass.netdomains -h
-amass.tracker -h
-amass.viz -h
-amass.db -h
-EOF
+arch-nspawn $CHROOT/$USER amass -h
+arch-nspawn $CHROOT/$USER amass.netdomains -h
+arch-nspawn $CHROOT/$USER amass.tracker -h
+arch-nspawn $CHROOT/$USER amass.viz -h
+arch-nspawn $CHROOT/$USER amass.db -h
